# transcription_service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docker/: Dockerfile.base  docker-compose.yml
scripts/: end_to_end_transcription.py
transcription_service/: api.py  config.py  logger.py  main.py  models.py  transcription.py  utils.py  worker.py
